# ml_kuda_sports_lab

./: .dockerignore  .gitignore  README.md  bootstrap.sh  gpu_test.py  pyproject.toml  requirements.txt
src/ml_kuda_sports_lab/: __init__.py  __main__.py  gpu_test.py  torch-test.py  torch_test.py
src/ml_kuda_sports_lab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ml_kuda_sports_lab/weak_labeling/: nhl_drafts_wl.py  readme.md
src/ml_kuda_sports_lab/weak_supervision/: nhl_drafts_ws.py  readme.md
src/ml_kuda_sports_lab/webscraping/: webscreadme.md  ws_test.py
